Fixing Foreign domain role

--- a/ludus_foreign_domain/meta/main.yml
+++ b/ludus_foreign_domain/meta/main.yml
@@ -24,6 +24,6 @@ galaxy_info:
 
 collections:
   - ansible.windows
-  - microsoft.ad.domain
+  - microsoft.ad
   - community.windows
   - community.general
